--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2014-03-20 Aaron Russo <arusso@berkeley.edu> - 0.2.1
+* Cosmetic nagios.cfg template cleanup
+
 2014-03-20 Aaron Russo <arusso@berkeley.edu> - 0.2.0
 * Minor Refactor
 * Add support for service performance data
